--- a/EmpInfo/Views/Apply/BeginAuditJQApply.cshtml
+++ b/EmpInfo/Views/Apply/BeginAuditJQApply.cshtml
@@ -2,7 +2,8 @@
 @using Newtonsoft.Json;
 @{
     BeginAuditModel bam = (BeginAuditModel)ViewData["bam"];
-    JQAuditOtherInfoModel otherInfo = (JQAuditOtherInfoModel)bam.otherInfo;
+    //JQAuditOtherInfoModel otherInfo = (JQAuditOtherInfoModel)bam.otherInfo;
+    ei_jqApply otherInfo = (ei_jqApply)bam.otherInfo;
     string auditJson = JsonConvert.SerializeObject(bam.otherInfo);
 }
 @section CSS{
@@ -33,45 +34,82 @@
 @section Scripts {
     <script src="@Url.Content("~/Scripts/bootstrap-datetimepicker.min.js")"></script>
     <script src="@Url.Content("~/Scripts/bootstrap-datetimepicker.zh-CN.js")"></script>
+    <script src="@Url.Content("~/Scripts/jquery.cookie.js")"></script>
     <script>
-        $(function () {
-            $(".datePicker").datetimepicker({
-                language: 'zh-CN',
-                format: "yyyy-mm-dd",
-                autoclose: true,
-                startView: 2,
-                minView: 2,
-                initialDate: "@DateTime.Now.ToString("yyyy-MM-dd")"
+    $(function () {
+        $(".datePicker").datetimepicker({
+            language: 'zh-CN',
+            format: "yyyy-mm-dd",
+            autoclose: true,
+            startView: 2,
+            minView: 2,
+            initialDate: "@DateTime.Now.ToString("yyyy-MM-dd")"
+        });
+        $(".selectUser").on("click", function () {
+            var self = this;
+            openSelectUserDialog($(self).val(), 3, function (result) {
+                $(self).val(result);
             });
-            $("#applyContent").load("CheckApply", { sysNo: "@bam.sysNum" }, function () {
-                $($("#applyContent .panel-heading")[0]).html("<i class='fa fa-list'></i> @bam.billTypeName 详情");
+        });
+        $("#applyContent").load("CheckApply #topContainer", { sysNo: "@bam.sysNum" }, function () {
+            $($("#applyContent .panel-heading")[0]).html("<i class='fa fa-list'></i> @bam.billTypeName 详情");
                 $("#waiting").remove();
                 $(".auditContent").css("visibility", "visible");
+                $("#flowRecordBt").on("click", function () {
+                    var box = $("<div></div>");
+                    $(box).load("CheckFlowRecord .list-group", { sysNo: "@bam.sysNum" }, function () {
+                        openMessageDialog($(box).html(), "查看流转记录");
+                    });
+                });
             });
             utils.loadObjData($("#auditForm"),@Html.Raw(auditJson));
-        });
-        function audit(isPass) {
-            openConfirmDialog("确认要" + (isPass ? "同意" : "拒绝") + "此申请吗？", function () {
-                $.post("HandleApply", {
-                    sysNo: "@bam.sysNum",
-                    step: "@bam.step",
-                    stepName:"@bam.stepName",
-                    isPass: isPass,
-                    work_evaluation: $("#work_evaluation").val(),
-                    work_comment: $("#work_comment").val(),
-                    wanna_employ: $("#wanna_employ").val(),
-                    employ_comment: $("#employ_comment").val(),
-                    leave_date:$("#leave_date").val()
-                }, function (data) {
+        //如果有cookie，就读取
+        $("input[name='charger_name']").val($.cookie("charger_name"));
+        $("input[name='produce_minister_name']").val($.cookie("produce_minister_name"));
+        $("input[name='highest_charger_name']").val($.cookie("highest_charger_name"));
+    });
+    function audit(isPass) {
+        $("#isPass").val(isPass);
+        
+        //设置cookie
+        var fm=utils.getFormObj($("#auditForm"));
+        var ckey,cvalue;
+        if(fm.charger_name){
+            ckey="charger_name";
+            cvalue=$("input[name='charger_name']").val();
+        }
+        if(fm.produce_minister_name){
+            ckey="produce_minister_name";
+            cvalue=$("input[name='produce_minister_name']").val();
+        }
+        if(fm.highest_charger_name){
+            ckey="highest_charger_name";
+            cvalue=$("input[name='highest_charger_name']").val();
+        }
+        console.log(ckey+":"+cvalue);
+        if(ckey && cvalue){
+            $.cookie(ckey,cvalue,{expires:400});
+        }
+        openConfirmDialog("确认要" + (isPass ? "同意" : "拒绝") + "此申请吗？", function () {
+            $.ajax({
+                type: 'post',
+                url: 'HandleApply',
+                data: $("#auditForm").serialize(),
+                cache: false,
+                dataType: 'json',
+                success: function (data) {
                     if (data.suc) {
                         toastr.success(data.msg);
                         setTimeout(function () { window.location.href = "@string.Concat("GetMyAuditingList?billType=",bam.billType)"; }, 2000);
                     } else {
                         toastr.error(data.msg);
                     }
-                });
+
+                }
             });
-        }
+
+            });
+    }
 </script>
 
 }
@@ -88,10 +126,19 @@
         <div class="panel-body">
             @if (bam.isPass == null) { 
             <form id="auditForm">
-                @if (otherInfo.quit_type == "辞职") { 
+                <input type="hidden" name="sysNo" value="@bam.sysNum" />
+                <input type="hidden" name="step" value="@bam.step" />
+                <input type="hidden" name="stepName" value="@bam.stepName" />
+                <input type="hidden" name="isPass" id="isPass" />
+
                 <div class="b-div">
                     <span class="b-label" style="vertical-align:top;">
-                        批准离职时间:
+                        @if (otherInfo.quit_type == "辞职") { 
+                            <span>批准离职时间: </span>
+                        }
+                        else {
+                            <span>自离时间: </span>
+                        }
                     </span>
                     <span style="display:inline-block;width:70%">
                         <span class="input-group date datePicker">
@@ -99,8 +146,7 @@
                             <span class="input-group-addon"><i class="fa fa-calendar"></i> </span>
                         </span>
                     </span>
-                </div>
-                }
+                </div>                
                 <div class="b-div">
                     <span class="b-label" style="vertical-align:top;">
                         工作评价:
@@ -143,6 +189,36 @@
                         <textarea type="text" class="form-control" rows="3" id="employ_comment" name="employ_comment" placeholder="是否愿意再次录用此离职员工的原因"></textarea>
                     </span>
                 </div>
+                @if (bam.stepName.Contains("组长") && otherInfo.charger_name==null) { 
+                <div class="b-div">
+                    <span class="b-label" style="vertical-align:top;">
+                        主管:
+                    </span>
+                    <span style="display:inline-block;width:70%">
+                        <input type="text" class="form-control selectUser" name="charger_name" placeholder="选择主管" />
+                    </span>
+                </div>
+                }
+                @if (bam.stepName.Contains("主管") && otherInfo.produce_minister_name==null) { 
+                <div class="b-div">
+                    <span class="b-label" style="vertical-align:top;">
+                        生产部长:
+                    </span>
+                    <span style="display:inline-block;width:70%">
+                        <input type="text" class="form-control selectUser" name="produce_minister_name" placeholder="选择生产部长" />
+                    </span>
+                </div>
+                }
+                @if (bam.stepName.Contains("部门负责人") && otherInfo.highest_charger_name==null) { 
+                <div class="b-div">
+                    <span class="b-label" style="vertical-align:top;">
+                        最高负责人:
+                    </span>
+                    <span style="display:inline-block;width:70%">
+                        <input type="text" class="form-control selectUser" name="highest_charger_name" placeholder="选择最高负责人" />
+                    </span>
+                </div>
+                }
             </form>
             }
             <div style="margin-top:12px;"></div>
@@ -166,5 +242,7 @@
     </div>
 </div>
 @section Modal {
+    @Html.Partial("_MessageDialog")
     @Html.Partial("_ConfirmDialog")
+    @Html.Partial("_SelectUsers")
 }
