--- a/EmpInfo/Views/ApplyExtra/ChargerUpdateLeaveDay.cshtml
+++ b/EmpInfo/Views/ApplyExtra/ChargerUpdateLeaveDay.cshtml
@@ -140,7 +140,7 @@
                         离职日期:
                     </span>
                     <span class="b-input">
-                        <input type="text" class="form-control" id="leaveDay" placeholder="输入信息后由系统带出" readonly />
+                        <input type="text" class="form-control" id="leaveDay" placeholder="由系统带出" readonly />
                     </span>
                 </div>
                 <div class="b-div">
