--- a/EmpInfo/Views/Account/Login.cshtml
+++ b/EmpInfo/Views/Account/Login.cshtml
@@ -338,7 +338,7 @@
 <div class="container">
     <div class="panel panel-primary" id="div_signin" style="max-width:420px;margin:60px auto 0 auto;">
         <div class="panel-heading">
-            <h3 class="panel-title"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> 信利员工信息查询平台</h3>
+            <h3 class="panel-title"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> 信利移动办公平台</h3>
         </div>
         <div class="panel-body">
             <div class="form-signin" id="form_signin">
