--- a/EmpInfo/Views/Apply/BeginApplyUC.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyUC.cshtml
@@ -303,7 +303,7 @@
                         <span class="b-input">
                             <select class="form-control" name="company">
                                 <option value="">---- 下拉选择出货公司 ----</option>
-                                @foreach (var al in m.accountingList) {                                    
+                                @foreach (var al in m.accountingList) {
                                     <option value="@al">@al</option>
                                 }
                             </select>
@@ -338,10 +338,10 @@
                         </span>
                         <div class="b-input">
                             <select class="form-control" name="arrive_time">
-                                <option value="@DateTime.Now.ToString("yyyy-MM-dd 21:00")">@DateTime.Now.ToString("yyyy-MM-dd 21:00")</option>
-                                <option value="@DateTime.Now.AddDays(1).ToString("yyyy-MM-dd 21:00")">@DateTime.Now.AddDays(1).ToString("yyyy-MM-dd 21:00")</option>
-                                <option value="@DateTime.Now.AddDays(2).ToString("yyyy-MM-dd 21:00")">@DateTime.Now.AddDays(2).ToString("yyyy-MM-dd 21:00")</option>
-                                <option value="@DateTime.Now.AddDays(3).ToString("yyyy-MM-dd 21:00")">@DateTime.Now.AddDays(3).ToString("yyyy-MM-dd 21:00")</option>
+                                @for (var i = 0; i < 4; i++) {
+                                    var d = DateTime.Now.AddDays(i).ToString("yyyy-MM-dd 21:00");
+                                    <option value="@d">@d</option>
+                                }                                
                             </select>
                             <div class="text-danger small"><i class="fa fa-info-circle"></i> 指预计实物及数据到达物流中心的时间</div>
                         </div>
