--- a/EmpInfo/Views/Apply/BeginAuditJQApply.cshtml
+++ b/EmpInfo/Views/Apply/BeginAuditJQApply.cshtml
@@ -53,16 +53,18 @@
         });
         $("#applyContent").load("CheckApply #topContainer", { sysNo: "@bam.sysNum" }, function () {
             $($("#applyContent .panel-heading")[0]).html("<i class='fa fa-list'></i> @bam.billTypeName 详情");
-                $("#waiting").remove();
-                $(".auditContent").css("visibility", "visible");
-                $("#flowRecordBt").on("click", function () {
-                    var box = $("<div></div>");
-                    $(box).load("CheckFlowRecord .list-group", { sysNo: "@bam.sysNum" }, function () {
+            $("#waiting").remove();
+            $(".auditContent").css("visibility", "visible");
+            $("#flowRecordBt").on("click", function () {
+                var box = $("<div></div>");
+                $(box).load("CheckFlowRecord .list-group", { sysNo: "@bam.sysNum" }, function () {
                         openMessageDialog($(box).html(), "查看流转记录");
                     });
                 });
-            });
-            utils.loadObjData($("#auditForm"),@Html.Raw(auditJson));
+        });
+        var auditJson=@Html.Raw(auditJson);
+        auditJson.leave_date=utils.parseTDate(auditJson.leave_date);
+        utils.loadObjData($("#auditForm"),auditJson);
         //如果有cookie，就读取
         $("input[name='charger_name']").val($.cookie("charger_name"));
         $("input[name='produce_minister_name']").val($.cookie("produce_minister_name"));
@@ -70,7 +72,7 @@
     });
     function audit(isPass) {
         $("#isPass").val(isPass);
-        
+
         //设置cookie
         var fm=utils.getFormObj($("#auditForm"));
         var ckey,cvalue;
@@ -108,7 +110,7 @@
                 }
             });
 
-            });
+        });
     }
 </script>
 
