--- a/EmpInfo/Views/Shared/_Layout.cshtml
+++ b/EmpInfo/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>信利员工信息查询系统</title>
+    <title>信利移动办公平台</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     
     <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap.min.css")" />
